--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -4,11 +4,35 @@
 }
 
 .container {
-  width: 1200px;
+  width: 480px;
   margin: 0 auto;
 }
+
+// .container {
+//   width: 1200px;
+//   margin: 0 auto;
+// }
+@media (min-width: 480px) {
+  .container {
+    width: 768px;
+    margin: 0 auto;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
+
+//  .wrapper {
+//   display: flex;
+//   justify-content: center;
+// }
+
 .wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -17,6 +41,7 @@ body {
   background-color: $primaryColor;
   color: $nightColor;
 }
+
 h1 {
   font-family: "Roboto", sans-serif;
   color: $primaryColor;
