--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,12 +1,39 @@
 .logo {
-  border-bottom: 1px ridge;
+  // border-bottom: 1px ridge;
 
-  &__type {
-    display: flex;
+  // &__type {
+  //   color: white;
+  //   // display: flex;
+  // }
+
+  // &__inter {
+  //   gap: 93px;
+  //   }
+  // }
+  @media (min-width: 480px) {
+    // .logo {
+    //   // display: flex;
+    // }
+    // &__type {
+    //   color: white;
+    //   // display: flex;
+    // }
+
+    // &__inter {
+    //   gap: 93px;
   }
+}
+@media (min-width: 768px) {
+  .logo {
+    border-bottom: 1px ridge;
 
-  &__inter {
-    gap: 93px;
+    &__type {
+      display: flex;
+    }
+
+    &__inter {
+      gap: 93px;
+    }
   }
 }
 .stil {
@@ -29,34 +56,70 @@
   }
 }
 .pages {
-  gap: 46px;
-  padding: 32px 0px;
+  // gap: 46px;
+  // padding: 32px 0px;
 
-  &__list-item {
-    position: relative;
-  }
+  // &__list-item {
+  //   position: relative;
+  // }
   &__name {
-    color: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.14;
-    text-decoration: none;
+    color: white;
 
-    &--active::after {
-      content: "";
-      position: absolute;
-      display: block;
-      width: 100%;
-      height: 4px;
-      top: 49px;
-      border-radius: 2px;
-      background: #2196f3;
+    // color: inherit;
+    // font-weight: 500;
+    // font-size: 16px;
+    // line-height: 1.14;
+    // text-decoration: none;
+
+    // &--active::after {
+    //   content: "";
+    //   position: absolute;
+    //   display: block;
+    //   width: 100%;
+    //   height: 4px;
+    //   top: 49px;
+    //   border-radius: 2px;
+    //   background: #2196f3;
+    // }
+
+    // &:hover,
+    // &:focus {
+    //   color: $skyColor;
+    //   transition: $typicalTransition;
+    // }
+  }
+}
+@media (min-width: 480px), (min-width: 768px) {
+  .pages {
+    gap: 46px;
+    padding: 32px 0px;
+
+    &__list-item {
+      position: relative;
     }
+    &__name {
+      color: inherit;
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.14;
+      text-decoration: none;
 
-    &:hover,
-    &:focus {
-      color: $skyColor;
-      transition: $typicalTransition;
+      &--active::after {
+        content: "";
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 4px;
+        top: 49px;
+        border-radius: 2px;
+        background: #2196f3;
+      }
+
+      &:hover,
+      &:focus {
+        color: $skyColor;
+        transition: $typicalTransition;
+      }
     }
   }
 }
@@ -64,17 +127,39 @@
   margin-left: auto;
 
   &__contact {
-    gap: 50px;
-    padding: 32px 0px;
+    gap: 0px;
+
+    padding: 0px;
   }
 
   &__color {
-    fill: $cloudColor;
+    fill: white;
+    // fill: $cloudColor;
 
-    &:hover,
-    &:focus {
-      fill: $skyColor;
-      transition: $typicalTransition;
+    // &:hover,
+    // &:focus {
+    //   fill: $skyColor;
+    //   transition: $typicalTransition;
+    // }
+  }
+}
+@media (min-width: 480px), (min-width: 768px) {
+  .navi {
+    margin-left: auto;
+
+    &__contact {
+      gap: 50px;
+      padding: 32px 0px;
+    }
+
+    &__color {
+      fill: $cloudColor;
+
+      &:hover,
+      &:focus {
+        fill: $skyColor;
+        transition: $typicalTransition;
+      }
     }
   }
 }
