--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -15,13 +15,13 @@
 @media (min-width: 480px) {
   .container {
     width: 768px;
-    margin: 0 auto;
+    // margin: 0 auto;
   }
 }
 @media (min-width: 768px) {
   .container {
     width: 1200px;
-    margin: 0 auto;
+    // margin: 0 auto;
   }
 }
 
@@ -46,8 +46,28 @@ h1 {
   font-family: "Roboto", sans-serif;
   color: $primaryColor;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  // font-size: 44px;
+  font-size: 26px;
+  // line-height: 1.36;
+  line-height: 1.61;
+}
+// @media (min-width: 480px) {
+//   h1 {
+//     // font-family: "Roboto", sans-serif;
+//     // color: $primaryColor;
+//     // font-weight: 900;
+//     // font-size: 26px;
+//     // line-height: 1.61;
+//   }
+// }
+@media (min-width: 768px) {
+  h1 {
+    // font-family: "Roboto", sans-serif;
+    // color: $primaryColor;
+    // font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 ul {
   list-style-type: none;
