modified:   sass/components/_header.scss #	modified:   sass/utils/_global.scss

--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -33,8 +33,13 @@
 .wrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  // justify-content: center;
 }
+
+// @media (min-width: 480px) {
+//   .wrapper {
+//   }
+// }
 
 body {
   font-family: "Roboto", sans-serif;
