--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -2,12 +2,32 @@
   background-color: $fogColor;
   padding: 60px 0px;
   border-top: 1px ridge;
+
   &__stil {
     font-family: "Raleway", sans-serif;
     color: $primaryColor;
     font-size: 26px;
     line-height: 1.19;
     text-decoration: none;
+    // margin-left: 52px;
+    display: flex;
+    //  align-items: center;
+    justify-content: center;
+  }
+}
+
+@media (min-width: 480px) {
+  .down-wall {
+    padding-bottom: 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .down-wall {
+    padding: 60px 0px;
+    &__stil {
+      justify-content: left;
+    }
   }
 }
 
@@ -25,6 +45,10 @@
     font-size: $pixel;
     line-height: 1.5;
     text-decoration: none;
+    // margin-left: 63px;
+    display: flex;
+    // align-items: center;
+    justify-content: center;
 
     &:hover,
     &:focus {
@@ -34,9 +58,17 @@
   }
 }
 
+@media (min-width: 768px) {
+  .post__contact {
+    justify-content: left;
+  }
+}
+
 .connect {
-  padding-top: 4px;
-  padding-left: 70px;
+  // padding-top: 4px;
+  // padding-left: 70px;
+
+  padding: 60px 20px 0px;
 
   &__join {
     color: $primaryColor;
@@ -44,10 +76,15 @@
     font-size: 14px;
     line-height: 1.14;
     text-transform: uppercase;
+    // padding: 0px 120px;
+    padding: 0;
+    display: flex;
+    // align-items: center;
+    justify-content: center;
   }
   &__letter {
     background-color: $fogColor;
-    width: 358px;
+    width: 450px;
     height: 48px;
     padding-left: 16px;
     margin-top: 20px;
@@ -59,6 +96,7 @@
   &__circles {
     padding-top: 20px;
     gap: 10px;
+    margin-left: 0px;
   }
   &__wheel {
     width: 44px;
@@ -81,6 +119,37 @@
       fill: $primaryColor;
       cursor: pointer;
       transition: $typicalTransition;
+    }
+  }
+}
+@media (min-width: 480px) {
+  .connect {
+    // padding-top: 4px;
+    // padding-left: 70px;
+    padding: 4px 70px 120px;
+    &__letter {
+      //   width: 358px;
+      margin-left: 100px;
+    }
+    &__join {
+      // padding: 0px 155px;
+      padding: 0;
+      // display: flex;
+      // align-items: center;
+      // justify-content: center;
+    }
+  }
+}
+@media (min-width: 768px) {
+  .connect {
+    // padding-left: 20px;
+    padding: 4px 45px;
+    &__letter {
+      width: 358px;
+      margin-left: 0;
+    }
+    &__join {
+      justify-content: left;
     }
   }
 }
