--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,9 +11,9 @@
   //   }
   // }
   @media (min-width: 480px) {
-    // .logo {
-    //   // display: flex;
-    // }
+    .logo {
+      display: flex;
+    }
     // &__type {
     //   color: white;
     //   // display: flex;
@@ -44,7 +44,7 @@
     color: $secondaryColor;
     font-size: 26px;
     line-height: 1.19;
-    margin-right: 93px;
+    // margin-right: 93px;
     text-decoration: none;
 
     &:focus {
@@ -55,6 +55,19 @@
     color: $skyColor;
   }
 }
+
+@media (min-width: 480px) {
+  .stil__icon {
+    margin-right: 46px;
+  }
+}
+
+@media (min-width: 768px) {
+  .stil__icon {
+    margin-right: 93px;
+  }
+}
+
 .pages {
   // gap: 46px;
   // padding: 32px 0px;
@@ -89,9 +102,9 @@
     // }
   }
 }
-@media (min-width: 480px), (min-width: 768px) {
+@media (min-width: 480px) {
   .pages {
-    gap: 46px;
+    gap: 23px;
     padding: 32px 0px;
 
     &__list-item {
@@ -123,6 +136,13 @@
     }
   }
 }
+
+@media (min-width: 768px) {
+  .pages {
+    gap: 46px;
+  }
+}
+
 .navi {
   margin-left: auto;
 
@@ -143,13 +163,13 @@
     // }
   }
 }
-@media (min-width: 480px), (min-width: 768px) {
+@media (min-width: 480px) {
   .navi {
     margin-left: auto;
 
     &__contact {
       gap: 50px;
-      padding: 32px 0px;
+      // padding: 32px 0px;
     }
 
     &__color {
@@ -161,5 +181,10 @@
         transition: $typicalTransition;
       }
     }
+  }
+}
+@media (min-width: 768px) {
+  .navi__contact {
+    padding: 32px 0px;
   }
 }
