--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,41 +1,40 @@
 .logo {
-  // border-bottom: 1px ridge;
+  border-bottom: 1px ridge;
 
-  // &__type {
-  //   color: white;
-  //   // display: flex;
-  // }
+  &__type {
+    display: flex;
+  }
 
-  // &__inter {
-  //   gap: 93px;
-  //   }
-  // }
-  @media (min-width: 480px) {
-    .logo {
-      display: flex;
-    }
-    // &__type {
-    //   color: white;
-    //   // display: flex;
-    // }
-
-    // &__inter {
-    //   gap: 93px;
+  &__inter {
+    gap: 93px;
   }
 }
-@media (min-width: 768px) {
-  .logo {
-    border-bottom: 1px ridge;
+// @media (min-width: 480px) {
+//   .logo {
+//     display: flex;
+//   }
+//   &__type {
+//     color: white;
+//     display: flex;
+//   }
 
-    &__type {
-      display: flex;
-    }
+//   &__inter {
+//     gap: 93px;
+//   }
+// }
+// @media (min-width: 768px) {
+//   .logo {
+//     border-bottom: 1px ridge;
 
-    &__inter {
-      gap: 93px;
-    }
-  }
-}
+//     &__type {
+//       display: flex;
+//     }
+
+//     &__inter {
+//       gap: 93px;
+//     }
+//   }
+// }
 .stil {
   padding: 24px 0px 25px;
 
@@ -69,28 +68,61 @@
 }
 
 .pages {
-  // gap: 46px;
-  // padding: 32px 0px;
+  gap: 46px;
+  padding: 32px 0px;
 
-  // &__list-item {
-  //   position: relative;
-  // }
+  &__list-item {
+    position: relative;
+  }
   &__name {
-    color: white;
+    // color: white;
 
-    // color: inherit;
-    // font-weight: 500;
-    // font-size: 16px;
-    // line-height: 1.14;
-    // text-decoration: none;
+    color: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.14;
+    text-decoration: none;
 
-    // &--active::after {
-    //   content: "";
-    //   position: absolute;
-    //   display: block;
-    //   width: 100%;
-    //   height: 4px;
-    //   top: 49px;
+    &--active::after {
+      content: "";
+      position: absolute;
+      display: block;
+      width: 100%;
+      height: 4px;
+      top: 49px;
+      border-radius: 2px;
+      background: #2196f3;
+    }
+
+    &:hover,
+    &:focus {
+      color: $skyColor;
+      transition: $typicalTransition;
+    }
+  }
+}
+@media (min-width: 480px) {
+  .pages {
+    gap: 23px;
+    // padding: 32px 0px;
+
+    // &__list-item {
+    //   position: relative;
+    // }
+    // &__name {
+    //   color: inherit;
+    //   font-weight: 500;
+    //   font-size: 16px;
+    //   line-height: 1.14;
+    //   text-decoration: none;
+
+    //   &--active::after {
+    //     content: "";
+    //     position: absolute;
+    //     display: block;
+    //     width: 100%;
+    //     height: 4px;
+    //     top: 49px;
     //   border-radius: 2px;
     //   background: #2196f3;
     // }
@@ -100,40 +132,7 @@
     //   color: $skyColor;
     //   transition: $typicalTransition;
     // }
-  }
-}
-@media (min-width: 480px) {
-  .pages {
-    gap: 23px;
-    padding: 32px 0px;
-
-    &__list-item {
-      position: relative;
-    }
-    &__name {
-      color: inherit;
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 1.14;
-      text-decoration: none;
-
-      &--active::after {
-        content: "";
-        position: absolute;
-        display: block;
-        width: 100%;
-        height: 4px;
-        top: 49px;
-        border-radius: 2px;
-        background: #2196f3;
-      }
-
-      &:hover,
-      &:focus {
-        color: $skyColor;
-        transition: $typicalTransition;
-      }
-    }
+    // }
   }
 }
 
@@ -153,8 +152,8 @@
   }
 
   &__color {
-    fill: white;
-    // fill: $cloudColor;
+    // fill: white;
+    fill: $cloudColor;
 
     // &:hover,
     // &:focus {
