--- a/sass/components/_page-photopeople.scss
+++ b/sass/components/_page-photopeople.scss
@@ -7,6 +7,8 @@
     0px 1px 3px rgba(0, 0, 0, 0.12);
 
   &__img {
+    width: 450px;
+    height: 460px;
     border-top-left-radius: 4px;
     border-bottom-right-radius: 4px;
     display: block;
@@ -41,4 +43,18 @@
 
 .circles-inter {
   padding: 12px;
+}
+
+@media (min-width: 480px) {
+  .photo-people__img {
+    width: 354px;
+    height: 374px;
+  }
+}
+
+@media (min-width: 768px) {
+  .photo-people__img {
+    width: 270px;
+    height: 260px;
+  }
 }
