--- a/sass/components/_page-photowork.scss
+++ b/sass/components/_page-photowork.scss
@@ -1,24 +1,56 @@
 .photo-work {
-  position: relative;
-  overflow: hidden;
+  position: absolute;
+  overflow: auto;
+  width: 0;
+  height: 0;
 
-  &__img {
-    display: block;
-  }
+  // &__img {
+  // display: block;
+
   &__overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 370px;
-    height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);
-    color: $primaryColor;
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.18;
-    text-align: center;
+    // position: absolute;
+    // bottom: 1;
+    // left: 1;
+    // width: 0;
+    // height: 0;
+    background-color: white;
+    color: white;
+    // font-weight: 400;
+    // font-size: 0px;
+    // line-height: 0;
+    // text-align: end;
   }
-  &__text {
-    padding-top: 27px;
+}
+// &__text {
+//   padding-top: 0;
+// }
+
+@media (min-width: 768px) {
+  .photo-work {
+    position: relative;
+    overflow: hidden;
+    width: 370px;
+    height: 294px;
+
+    &__img {
+      display: block;
+    }
+
+    &__overlay {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 370px;
+      height: 70px;
+      background-color: rgba(47, 48, 58, 0.8);
+      color: $primaryColor;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 1.18;
+      text-align: center;
+    }
+    &__text {
+      padding-top: 27px;
+    }
   }
 }
