--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -53,12 +53,32 @@
     font-size: 36px;
     line-height: 1.16;
     padding-bottom: 50px;
+
+    &--color {
+      color: $snowColor;
+    }
   }
   &__inter {
     gap: 30px;
   }
 }
+
+@media (min-width: 768px) {
+  .section__titles--color {
+    color: $secondaryColor;
+  }
+}
+
 .third-section {
-  padding-bottom: 94px;
+  height: 0;
+  padding-bottom: 0;
   padding-top: 0;
+}
+
+@media (min-width: 768px) {
+  .third-section {
+    height: auto;
+    padding-bottom: 94px;
+    padding-top: 0;
+  }
 }
