modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	new file:   js/mobile-menu.js #	modified:   sass/components/_modal.scss #	modified:   sass/components/_page-vectors.scss #	modified:   sass/components/_section.scss

--- a/sass/components/_page-vectors.scss
+++ b/sass/components/_page-vectors.scss
@@ -10,6 +10,7 @@
     font-weight: 700;
     font-size: $pixel;
     line-height: 1.14;
+    text-align: center;
   }
   &__icon {
     background-color: $snowColor;
