--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -8,11 +8,11 @@
     url("../images/main.image.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 480px 400px;
+  background-size: 480px 350px;
   max-width: 480px;
   margin: 0 auto;
-  padding-bottom: 28px;
-  padding-top: 28px;
+  padding-bottom: 0;
+  padding-top: 0;
 
   &__description {
     padding: 72px 58px 0px;
