modified:   sass/components/_header.scss

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -24,19 +24,19 @@
     //     gap: 93px;
   }
 }
-@media (min-width: 768px) {
-  .logo {
-    // height: 100px;
-    //     border-bottom: 1px ridge;
+// @media (min-width: 768px) {
+//   .logo {
+// height: 100px;
+//     border-bottom: 1px ridge;
 
-    //     &__type {
-    //       display: flex;
-    //     }
+//     &__type {
+//       display: flex;
+//     }
 
-    //     &__inter {
-    //       gap: 93px;
-  }
-}
+//     &__inter {
+//       gap: 93px;
+//   }
+// }
 
 .stil {
   padding: 15px 10px 15px;
