--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -196,68 +196,77 @@
 // menu-modal
 
 .menu-toggle {
-  min-height: 40px;
-  min-width: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-
-  margin: 0;
-  // padding: 0;
   background-color: transparent;
   cursor: pointer;
   border: none;
   border-radius: 50%;
   outline: none;
   position: absolute;
-  padding: 20px 450px;
+  padding: 20px 10px;
+  margin: 0px 450px;
 }
 
-@media (min-width: 480px) {
-  .menu-toggle {
-    display: none;
-  }
-}
+// @media (min-width: 480px) {
+//   .menu-toggle {
+//     display: none;
+//   }
+// }
 
-.menu-toggle:hover,
-.menu-toggle:focus {
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
-.menu {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-@media (max-width: 767px) {
-  .menu {
-    display: none;
-  }
-}
-.menu-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 32px;
-  background-color: #3f51b5;
-  z-index: 999;
-
-  transform: translateX(100%);
-  transition: transform 250ms ease-in-out;
-}
 .mobile-menu {
-  padding: 0;
+  background-color: $primaryColor;
+  padding-top: 48px;
+  padding-left: 40px;
   margin: 0;
   list-style: none;
-}
-
-.mobile-menu .link {
-  display: block;
-  padding: 10px;
-  color: #fff;
-  text-decoration: none;
+  width: 480px;
+  height: 796px;
+  &__navi {
+    padding-bottom: 36px;
+  }
+  &__distance {
+    padding-bottom: 200px;
+  }
+  &__style {
+    text-decoration: none;
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    &:focus,
+    :hover {
+      color: $skyColor;
+    }
+    &--type {
+      font-size: 40px;
+      line-height: 1.175;
+      color: $nightColor;
+    }
+    &--type-tel {
+      font-size: 34px;
+      line-height: 1.7;
+      color: $cloudColor;
+    }
+    &--type-mail {
+      font-size: 24px;
+      line-height: 28px;
+      color: $cloudColor;
+    }
+    &--type-social {
+      font-size: 18px;
+      line-height: 22px;
+      color: $skyColor;
+      padding-right: 20px;
+    }
+    &:hover,
+    &:focus {
+      color: $skyColor;
+      transition: $typicalTransition;
+    }
+  }
+  &__media {
+    padding-top: 64px;
+    display: flex;
+  }
 }
