--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -195,6 +195,9 @@
 
 // menu-modal
 
+.menu {
+}
+
 .menu-toggle {
   display: flex;
   align-items: center;
@@ -205,15 +208,48 @@
   border-radius: 50%;
   outline: none;
   position: absolute;
-  padding: 20px 10px;
-  margin: 0px 450px;
+  padding: 20px 0px;
+  margin: 0px 430px;
+  &:focus,
+  &:hover {
+    color: $skyColor;
+  }
 }
 
-// @media (min-width: 480px) {
-//   .menu-toggle {
-//     display: none;
-//   }
-// }
+@media (min-width: 480px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  // padding: 32px;
+  // background-color: #3f51b5;
+  z-index: 999;
+
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.menu-container .menu-toggle {
+  position: absolute;
+  top: 5px;
+  // right: 16px;
+  color: $nightColor;
+  &:hover,
+  &:focus {
+    color: $skyColor;
+  }
+}
 
 .mobile-menu {
   background-color: $primaryColor;
@@ -227,7 +263,7 @@
     padding-bottom: 36px;
   }
   &__distance {
-    padding-bottom: 200px;
+    padding-bottom: 150px;
   }
   &__style {
     text-decoration: none;
