--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import "./components/page-photopeople";
 @import "./components/page-icon";
 @import "./components/footer";
+@import "./components/mobile-menu";
 @import "./components/modal";
 @import "./components/button";
 @import "./components/portfolio";
