--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -15,24 +15,26 @@
   padding-top: 0;
 
   &__description {
-    padding: 72px 58px 0px;
+    padding: 72px 70px 0px;
     text-transform: uppercase;
     text-align: center;
   }
 }
-@media (min-width: 480px) {
+@media (min-width: 768px) {
+  // @media (min-width: 480px) {
   .section-title {
     background-size: 768px 400px;
     max-width: 768px;
     padding-bottom: 10px;
     padding-top: 10px;
 
-    &__description {
-      padding: 100px 192px 0px;
-    }
+    // &__description {
+    //   padding: 100px 192px 0px;
+    // }
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
+  // @media (min-width: 768px) {
   .section-title {
     background-size: 1600px 600px;
     max-width: 1600px;
@@ -62,8 +64,8 @@
     gap: 30px;
   }
 }
-
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
+  // @media (min-width: 768px) {
   .section__titles--color {
     color: $secondaryColor;
   }
@@ -74,8 +76,8 @@
   padding-bottom: 0;
   padding-top: 0;
 }
-
-@media (min-width: 768px) {
+@media (min-width: 1200px) {
+  // @media (min-width: 768px) {
   .third-section {
     height: auto;
     padding-bottom: 94px;
