--- a/sass/utils/_global.scss
+++ b/sass/utils/_global.scss
@@ -4,43 +4,36 @@
 }
 
 .container {
-  width: 480px;
+  // width: 320px;
   margin: 0 auto;
 }
 
-// .container {
-//   width: 1200px;
-//   margin: 0 auto;
+// @media screen and (min-width: 480px) {
+//   .container {
+//     width: 768px;
+//   }
 // }
-
-@media (min-width: 480px) {
+// @media screen and (min-width: 768px) {
+//   .container {
+//     width: 1200px;
+//   }
+// }
+@media screen and (min-width: 768px) {
   .container {
     width: 768px;
-    // margin: 0 auto;
   }
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .container {
     width: 1200px;
-    // margin: 0 auto;
   }
 }
-
-//  .wrapper {
-//   display: flex;
-//   justify-content: center;
-// }
 
 .wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
-
-// @media (min-width: 480px) {
-//   .wrapper {
-//   }
-// }
 
 body {
   font-family: "Roboto", sans-serif;
@@ -52,25 +45,12 @@ h1 {
   font-family: "Roboto", sans-serif;
   color: $primaryColor;
   font-weight: 900;
-  // font-size: 44px;
   font-size: 26px;
-  // line-height: 1.36;
   line-height: 1.61;
 }
-// @media (min-width: 480px) {
-//   h1 {
-//     // font-family: "Roboto", sans-serif;
-//     // color: $primaryColor;
-//     // font-weight: 900;
-//     // font-size: 26px;
-//     // line-height: 1.61;
-//   }
-// }
+
 @media (min-width: 768px) {
   h1 {
-    // font-family: "Roboto", sans-serif;
-    // color: $primaryColor;
-    // font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
   }
