--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -62,6 +62,7 @@
 
 .connect {
   padding: 60px 20px 0px;
+  width: 100%;
 
   &__join {
     color: $primaryColor;
@@ -75,7 +76,7 @@
   }
   &__letter {
     background-color: $fogColor;
-    // width: 100%;
+    width: 100%;
     // height: 48px;
     padding: 14px 200px 14px 16px;
     margin-top: 20px;
@@ -114,15 +115,17 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
+  //  @media (min-width: 480px) {
   .connect {
-    padding: 4px 70px 120px;
+    padding: 0px 80px 100px;
+    width: 500px;
     // &__letter {
     //   // margin-left: 100px;
     //   width: 450px;
-  }
-  &__join {
-    padding: 0;
+
+    &__join {
+      padding: 0;
+    }
   }
 }
 
@@ -130,10 +133,11 @@
   // @media (min-width: 768px) {
   .connect {
     padding: 4px 45px;
-    // &__letter {
-    //   width: 358px;
-    //   // margin-left: 0;
-    // }
+    width: 300px;
+    &__letter {
+      width: 358px;
+      margin-left: 0;
+    }
     &__join {
       justify-content: left;
     }
