modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   sass/components/_button.scss #	modified:   sass/components/_footer.scss #	modified:   sass/components/_header.scss #	modified:   sass/components/_mobile-menu.scss #	modified:   sass/components/_modal.scss #	modified:   sass/components/_page-photopeople.scss #	modified:   sass/components/_page-photowork.scss #	modified:   sass/components/_section.scss #	modified:   sass/utils/_global.scss

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -86,13 +86,11 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .button-down {
     margin: 20px auto;
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .button-down {
     margin: 10px 0px;
   }
@@ -107,7 +105,7 @@
   padding: 10px 72px;
   border-radius: 4px;
   box-shadow: $typicalShade;
-  margin: 10px 94px;
+  margin: 10px 25%;
   border: 0px;
   text-align: center;
   justify-content: center;
@@ -121,8 +119,7 @@
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .button-form {
-    margin: 10px 124px;
+    margin: 10px 120px;
   }
 }
