--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,13 +14,11 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .down-wall {
     padding-bottom: 0;
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .down-wall {
     padding: 60px 0px;
     &__stil {
@@ -54,9 +52,12 @@
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
-  .post__contact {
-    justify-content: left;
+  .post {
+    padding: 20px 45px 0px 0px;
+
+    &__contact {
+      justify-content: left;
+    }
   }
 }
 
@@ -77,7 +78,6 @@
   &__letter {
     background-color: $fogColor;
     width: 100%;
-    // height: 48px;
     padding: 14px 200px 14px 16px;
     margin-top: 20px;
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -115,14 +115,9 @@
   }
 }
 @media (min-width: 768px) {
-  //  @media (min-width: 480px) {
   .connect {
-    padding: 0px 80px 100px;
+    padding: 0px 10px 100px;
     width: 500px;
-    // &__letter {
-    //   // margin-left: 100px;
-    //   width: 450px;
-
     &__join {
       padding: 0;
     }
@@ -130,7 +125,6 @@
 }
 
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .connect {
     padding: 4px 45px;
     width: 300px;
