--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -11,7 +11,6 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .logo {
     height: 82px;
   }
@@ -35,7 +34,6 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .stil {
     padding: 24px 15px 25px;
     &__icon {
@@ -44,7 +42,6 @@
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .stil {
     padding: 24px 0px 25px;
 
@@ -57,7 +54,7 @@
 .pages {
   gap: 46px;
   padding: 0px;
-  display: block;
+  display: none;
 
   &__list-item {
     position: relative;
@@ -67,7 +64,6 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .pages {
     gap: 23px;
     padding: 32px 0px;
@@ -99,7 +95,6 @@
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .pages {
     gap: 46px;
   }
@@ -112,7 +107,7 @@
     gap: 0px;
     height: 0px;
     padding: 0px;
-    display: block;
+    display: none;
   }
 
   &__color {
@@ -120,11 +115,11 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .navi {
     margin-left: auto;
 
     &__contact {
+      display: block;
       gap: 50px;
       padding: 21px 15px;
     }
@@ -141,7 +136,6 @@
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .navi__contact {
     padding: 32px 0px;
     display: flex;
