--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -7,16 +7,14 @@
   border: none;
   border-radius: 50%;
   outline: none;
-  position: absolute;
-  // padding: 20px 0px;
-  // margin: 0px 430px;
+  position: relative;
+  left: 90%;
   &:focus,
   &:hover {
     color: $skyColor;
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .menu-toggle {
     display: none;
   }
@@ -40,7 +38,7 @@
 
 .menu-container .menu-toggle {
   position: absolute;
-  top: 5px;
+  top: 15px;
   color: $nightColor;
   &:hover,
   &:focus {
@@ -54,8 +52,8 @@
   padding-left: 40px;
   margin: 0;
   list-style: none;
-  width: 480px;
-  height: 796px;
+  width: 100%;
+  height: 100%;
   &__navi {
     padding-bottom: 36px;
   }
