--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,8 +17,8 @@
 .modal {
   position: relative;
   transition-delay: 250ms;
-  width: 450px;
-  height: 609px;
+  width: 90%;
+  height: 85%;
   background-color: $primaryColor;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -26,7 +26,7 @@
 
   &__text {
     color: $nightColor;
-    width: 448px;
+    width: 95%;
     height: 23px;
     font-weight: 700;
     font-size: 20px;
@@ -142,7 +142,7 @@
 }
 .checkbox {
   color: $cloudColor;
-  font-weight: 400;
+  font-weight: 500;
   font-size: 11.5px;
   line-height: 1.16;
   display: flex;
@@ -170,6 +170,10 @@
     border-radius: 2px;
     transition: $typicalTransition;
     opacity: 0;
+  }
+  &__spam {
+    display: block;
+    width: 100%;
   }
   &__point:checked + svg {
     opacity: 1;
