--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -8,7 +8,7 @@
     url("../images/main.image.jpg");
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 480px 350px;
+  background-size: 480px 100%;
   max-width: 480px;
   margin: 0 auto;
   padding-bottom: 0;
@@ -21,20 +21,14 @@
   }
 }
 @media (min-width: 768px) {
-  // @media (min-width: 480px) {
   .section-title {
     background-size: 768px 400px;
     max-width: 768px;
     padding-bottom: 10px;
     padding-top: 10px;
-
-    // &__description {
-    //   padding: 100px 192px 0px;
-    // }
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .section-title {
     background-size: 1600px 600px;
     max-width: 1600px;
@@ -65,7 +59,6 @@
   }
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .section__titles--color {
     color: $secondaryColor;
   }
@@ -75,12 +68,13 @@
   height: 0;
   padding-bottom: 0;
   padding-top: 0;
+  display: none;
 }
 @media (min-width: 1200px) {
-  // @media (min-width: 768px) {
   .third-section {
     height: auto;
     padding-bottom: 94px;
     padding-top: 0;
+    display: flex;
   }
 }
