--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -17,6 +17,7 @@
 .modal {
   position: relative;
   transition-delay: 250ms;
+  max-width: 450px;
   width: 90%;
   height: 85%;
   background-color: $primaryColor;
@@ -33,7 +34,7 @@
     line-height: 1.15;
     text-align: center;
     margin-top: 40px;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
   }
 
   &__form {
@@ -49,6 +50,7 @@
 
     &__text {
       margin-left: 27px;
+      margin-bottom: 12px;
     }
   }
 }
@@ -93,13 +95,13 @@
     transition: $typicalTransition;
 
     &--name {
-      top: 18%;
+      top: 19%;
     }
     &--tel {
-      top: 30%;
+      top: 31%;
     }
     &--email {
-      top: 41.75%;
+      top: 43%;
     }
   }
   &__text {
