--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -105,7 +105,10 @@
   padding: 10px 72px;
   border-radius: 4px;
   box-shadow: $typicalShade;
-  margin: 10px 25%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
   border: 0px;
   text-align: center;
   justify-content: center;
@@ -118,8 +121,8 @@
     transition: $typicalTransition;
   }
 }
-@media (min-width: 1200px) {
-  .button-form {
-    margin: 10px 120px;
-  }
-}
+// @media (min-width: 1200px) {
+//   .button-form {
+//     margin: 10px 120px;
+//   }
+// }
