--- a/sass/components/_page-photopeople.scss
+++ b/sass/components/_page-photopeople.scss
@@ -6,38 +6,63 @@
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
 
+  /* 1x screens, default value, 270x260 image */
+
   &__img {
-    width: 450px;
-    height: 460px;
+    max-width: 450px;
+    width: 100%;
+    height: auto;
     border-top-left-radius: 4px;
     border-bottom-right-radius: 4px;
     display: block;
-  }
-  &__description {
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    background-color: $primaryColor;
-    text-align: center;
-    padding: 30px 0px;
-  }
-  &__social {
-    padding-top: 16px;
-    gap: 10px;
-  }
-  &__icon {
-    width: 44px;
-    height: 44px;
-    background-color: $primaryColor;
-    border-radius: 50px;
-    fill: $lateColor;
 
-    &:hover,
-    &:focus {
-      background-color: $skyColor;
-      cursor: pointer;
-      transition: $typicalTransition;
-      fill: $primaryColor;
+    width: 270px;
+    height: 260px;
+    background-image: url("images/men1.jpg");
+    background-image: url("images/woman_rel.jpg");
+    background-image: url("images/men_image2.jpg");
+    background-image: url("images/men_image3.jpg");
+    background-size: 270px 260px;
+  }
+
+  /* 2x screens, retina, 540x520 image */
+
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .box {
+      background-image: url("images/men1@2x.jpg");
+      background-image: url("images/woman_rel@2x.jpg");
+      background-image: url("images/men_image2@2x.jpg");
+      background-image: url("images/men_image3@2x.jpg");
     }
+  }
+}
+&__description {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  background-color: $primaryColor;
+  text-align: center;
+  padding: 30px 0px;
+}
+&__social {
+  padding-top: 16px;
+  gap: 10px;
+}
+&__icon {
+  width: 44px;
+  height: 44px;
+  background-color: $primaryColor;
+  border-radius: 50px;
+  fill: $lateColor;
+
+  &:hover,
+  &:focus {
+    background-color: $skyColor;
+    cursor: pointer;
+    transition: $typicalTransition;
+    fill: $primaryColor;
   }
 }
 
@@ -46,13 +71,11 @@
 }
 @media (min-width: 768px) {
   .photo-people__img {
-    width: 354px;
-    height: 374px;
+    max-width: 354px;
   }
 }
 @media (min-width: 1200px) {
   .photo-people__img {
-    width: 270px;
-    height: 260px;
+    max-height: 260px;
   }
 }
