--- a/sass/components/_page-vectors.scss
+++ b/sass/components/_page-vectors.scss
@@ -14,7 +14,8 @@
   }
   &__icon {
     background-color: $snowColor;
-    width: 450px;
+    max-width: 450px;
+    width: 100%;
     height: 120px;
     margin-bottom: 30px;
     padding: 25px 0px;
@@ -30,18 +31,18 @@
   }
 }
 @media (min-width: 768px) {
-  @media (min-width: 480px) {
-    .vector__box,
-    .vector__icon {
-      width: 354px;
-    }
+  // @media (min-width: 480px) {
+  .vector__box,
+  .vector__icon {
+    max-width: 354px;
   }
 }
+
 @media (min-width: 1200px) {
-  @media (min-width: 768px) {
-    .vector__box,
-    .vector__icon {
-      width: 270px;
-    }
+  // @media (min-width: 768px) {
+  .vector__box,
+  .vector__icon {
+    max-width: 270px;
   }
 }
+// }
