renamed:    images/Header img (1).jpg -> images/header img.jpg #	modified:   sass/components/_section.scss

--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -30,6 +30,7 @@
 }
 @media (min-width: 1200px) {
   .section-title {
+    background-size: 480px 100%;
     background-size: 1600px 600px;
     max-width: 1600px;
     padding-bottom: 94px;
