modified:   css/main.min.css #	modified:   css/main.min.css.map #	new file:   images/main.image.desk@1x.jpg #	new file:   images/main.image.desk@2x.jpg #	renamed:    images/header img.jpg -> images/main.image.mob@1x.jpg #	new file:   images/main.image.mob@2x.jpg #	new file:   images/main.image.tab@1x.jpg #	new file:   images/main.image.tab@2x.jpg #	new file:   images/men1.desk@1x.jpg #	new file:   images/men1.desk@2x.jpg #	new file:   images/men1.mob@1x.jpg #	new file:   images/men1.mob@2x.jpg #	new file:   images/men1.tab@1x.jpg #	new file:   images/men1.tab@2x.jpg #	new file:   images/men_image2.desk@1x.jpg #	new file:   images/men_image2.desk@2x.jpg #	new file:   images/men_image2.mob@1x.jpg #	new file:   images/men_image2.mob@2x.jpg #	new file:   images/men_image2.tab@1x.jpg #	new file:   images/men_image2.tab@2x.jpg #	new file:   images/men_image3.dek@1x.jpg #	new file:   images/men_image3.dek@2x.jpg #	new file:   images/men_image3.mob@1x.jpg #	new file:   images/men_image3.mob@2x.jpg #	new file:   images/men_image3.tab@1x.jpg #	new file:   images/men_image3.tab@2x.jpg #	new file:   images/woman_rel.desk@1x.jpg #	new file:   images/woman_rel.desk@2x.jpg #	new file:   images/woman_rel.mob@1x.jpg #	new file:   images/woman_rel.mob@2x.jpg #	new file:   images/woman_rel.tab@1x.jpg #	new file:   images/woman_rel.tab@2x.jpg #	modified:   index.html #	modified:   sass/components/_page-photopeople.scss

--- a/sass/components/_page-photopeople.scss
+++ b/sass/components/_page-photopeople.scss
@@ -16,27 +16,27 @@
     border-bottom-right-radius: 4px;
     display: block;
 
-    width: 270px;
-    height: 260px;
-    background-image: url("images/men1.jpg");
-    background-image: url("images/woman_rel.jpg");
-    background-image: url("images/men_image2.jpg");
-    background-image: url("images/men_image3.jpg");
-    background-size: 270px 260px;
-  }
+    // width: 270px;
+    // height: 260px;
+    //   background-image: url("images/men1.jpg");
+    //   background-image: url("images/woman_rel.jpg");
+    //   background-image: url("images/men_image2.jpg");
+    //   background-image: url("images/men_image3.jpg");
+    //   background-size: 270px 260px;
+    // }
 
-  /* 2x screens, retina, 540x520 image */
+    // /* 2x screens, retina, 540x520 image */
 
-  @media (min-device-pixel-ratio: 2),
-    (-webkit-min-device-pixel-ratio: 2),
-    (min-resolution: 192dpi),
-    (min-resolution: 2dppx) {
-    .box {
-      background-image: url("images/men1@2x.jpg");
-      background-image: url("images/woman_rel@2x.jpg");
-      background-image: url("images/men_image2@2x.jpg");
-      background-image: url("images/men_image3@2x.jpg");
-    }
+    // @media (min-device-pixel-ratio: 2),
+    //   (-webkit-min-device-pixel-ratio: 2),
+    //   (min-resolution: 192dpi),
+    //   (min-resolution: 2dppx) {
+    //   .box {
+    //     background-image: url("images/men1@2x.jpg");
+    //     background-image: url("images/woman_rel@2x.jpg");
+    //     background-image: url("images/men_image2@2x.jpg");
+    //     background-image: url("images/men_image3@2x.jpg");
+    //   }
   }
   &__description {
     border-bottom-left-radius: 4px;
