modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   sass/components/_modal.scss #	modified:   sass/components/_page-icon.scss #

--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -95,13 +95,13 @@
     transition: $typicalTransition;
 
     &--name {
-      top: 19%;
+      top: 16%;
     }
     &--tel {
-      top: 31%;
+      top: 26, 5%;
     }
     &--email {
-      top: 43%;
+      top: 36.25%;
     }
   }
   &__text {
