--- a/sass/components/_page-icon.scss
+++ b/sass/components/_page-icon.scss
@@ -2,10 +2,11 @@
   max-width: 210px;
   width: 100%;
   height: auto;
-  padding-right: 10px;
+  // padding-right: 10px;
   fill: $lateColor;
   border: 1px solid $lateColor;
   border-radius: 4px;
+  text-align: center;
 
   &:hover,
   &:focus {
