--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -26,9 +26,11 @@
 }
 .button-list {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: 15px;
   padding-bottom: 50px;
   -webkit-box-pack: center;
-  justify-content: center;
+  // justify-content: center;
   gap: 8px;
 
   &__btn {
@@ -52,6 +54,12 @@
         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
       transition: $typicalTransition;
     }
+  }
+}
+
+@media (min-width: 768px) {
+  .button-list {
+    justify-content: center;
   }
 }
 .button-down {
