modified:   css/main.min.css #	modified:   css/main.min.css.map #	new file:   images/111.desk@1x.jpg #	new file:   images/111.desk@2x.jpg #	new file:   images/111.mob@1x.jpg #	new file:   images/111.mob@2x.jpg #	new file:   images/111.tab@1x.jpg #	new file:   images/111.tab@2x.jpg #	deleted:    images/main.image.desk@1x.jpg #	deleted:    images/main.image.desk@2x.jpg #	deleted:    images/main.image.mob@1x.jpg #	deleted:    images/main.image.mob@2x.jpg #	deleted:    images/main.image.tab@1x.jpg #	deleted:    images/main.image.tab@2x.jpg #	new file:   images/main.image@2x.jpg #	new file:   images/main.image_mob@1x.jpg #	new file:   images/main.image_mob@2x.jpg #	new file:   images/main.image_tab@1x.jpg #	new file:   images/main.image_tab@2x.jpg #	modified:   images/men1.desk@1x.jpg #	modified:   images/men1.desk@2x.jpg #	modified:   images/men1.mob@1x.jpg #	modified:   images/men1.mob@2x.jpg #	modified:   images/men1.tab@1x.jpg #	modified:   images/men1.tab@2x.jpg #	modified:   images/men_image2.desk@1x.jpg #	modified:   images/men_image2.desk@2x.jpg #	modified:   images/men_image2.mob@1x.jpg #	modified:   images/men_image2.mob@2x.jpg #	modified:   images/men_image2.tab@1x.jpg #	modified:   images/men_image2.tab@2x.jpg #	modified:   images/men_image3.desk@1x.jpg #	modified:   images/men_image3.desk@2x.jpg #	modified:   images/men_image3.mob@1x.jpg #	modified:   images/men_image3.mob@2x.jpg #	modified:   images/men_image3.tab@1x.jpg #	modified:   images/men_image3.tab@2x.jpg #	new file:   images/portfolio-1.desk@1x.jpg #	new file:   images/portfolio-1.desk@2x.jpg #	new file:   images/portfolio-1.mob@1x.jpg #	new file:   images/portfolio-1.mob@2x.jpg #	new file:   images/portfolio-1.tab@1x.jpg #	new file:   images/portfolio-1.tab@2x.jpg #	new file:   images/portfolio-2.desk@1x.jpg #	new file:   images/portfolio-2.desk@2x.jpg #	new file:   images/portfolio-2.mob@1x.jpg #	new file:   images/portfolio-2.mob@2x.jpg #	new file:   images/portfolio-2.tab@1x.jpg #	new file:   i

--- a/sass/components/_page-photopeople.scss
+++ b/sass/components/_page-photopeople.scss
@@ -50,8 +50,8 @@
     max-width: 354px;
   }
 }
-@media (min-width: 1200px) {
-  .photo-people__img {
-    max-height: 260px;
-  }
-}
+// @media (min-width: 1200px) {
+//   .photo-people__img {
+//     max-height: 260px;
+//   }
+// }
