--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -5,7 +5,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/main.image.jpg");
+    url("../images/main.image_mob@1x.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 480px 100%;
@@ -15,21 +15,48 @@
   padding-top: 0;
 
   &__description {
-    padding: 72px 70px 0px;
+    padding: 72px 60px 0px;
     text-transform: uppercase;
     text-align: center;
   }
 }
+
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .section-title {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/main.image_mob@2x.jpg");
+  }
+}
+
 @media (min-width: 768px) {
   .section-title {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/main.image_tab@1x.jpg");
     background-size: 768px 400px;
     max-width: 768px;
     padding-bottom: 10px;
     padding-top: 10px;
   }
 }
+
 @media (min-width: 1200px) {
   .section-title {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/main.image.jpg");
     background-size: 1600px 600px;
     max-width: 1600px;
     padding-bottom: 94px;
@@ -40,6 +67,7 @@
     }
   }
 }
+
 .section {
   padding-bottom: 94px;
   padding-top: 94px;
