--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -5,7 +5,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url("../images/main.image_mob@1x.jpg");
+    url("../images/main.image@1x.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 480px 100%;
@@ -21,6 +21,15 @@
   }
 }
 
+@media (min-width: 768px) {
+  .section-title {
+    background-size: 768px 400px;
+    max-width: 768px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+}
+
 @media (min-device-pixel-ratio: 2),
   (min-resolution: 192dpi),
   (min-resolution: 2dppx) {
@@ -30,33 +39,12 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("../images/main.image_mob@2x.jpg");
-  }
-}
-
-@media (min-width: 768px) {
-  .section-title {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../images/main.image_tab@1x.jpg");
-    background-size: 768px 400px;
-    max-width: 768px;
-    padding-bottom: 10px;
-    padding-top: 10px;
+      url("../images/main.image@2x.jpg");
   }
 }
 
 @media (min-width: 1200px) {
   .section-title {
-    background-image: linear-gradient(
-        to bottom,
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url("../images/main.image.jpg");
     background-size: 1600px 600px;
     max-width: 1600px;
     padding-bottom: 94px;
@@ -65,6 +53,19 @@
     &__description {
       padding: 100px 252px 0px;
     }
+  }
+}
+
+@media (min-device-pixel-ratio: 3),
+  (min-resolution: 288dpi),
+  (min-resolution: 3dppx) {
+  .section-title {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../images/main.image@3x.jpg");
   }
 }
 
